# opengl_misc

./: .gitmodules  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: rectangle.vert  triangle.frag  triangle.vert
src/: main.c
src/gfx/: gfx.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h
src/ui/: menu.c  menu_main.c  menu_rectangle.c  menu_triangle.c  ui.c  ui.h
